log.txt
[20:59:05|28-10-21] FATAL ERROR: Traceback (most recent call last):
  File "main.py", line 278, in <module>
    file_objects = open('objects/' + files[i][0], 'r', encoding="utf-8") #
FileNotFoundError: [Errno 2] No such file or directory: 'objects/console.py'

[18:47:47|08-11-21] FATAL ERROR: Traceback (most recent call last):
  File "main.py", line 284, in <module>
    exec(code) # запуск всего кода который мы прочитали из файлов
  File "<string>", line 908
    def draw(self):
      ^
IndentationError: expected an indented block

[21:03:33|08-11-21] FATAL ERROR: Traceback (most recent call last):
  File "main.py", line 284, in <module>
    exec(code) # запуск всего кода который мы прочитали из файлов
  File "<string>", line 916
    self.obj_tanks[0].append(image_label('tanks/body/no_team/tank_base.png', settings.width//2, settings.height//2, scale=self.scale_tank, pixel=False, center=True))
    ^
IndentationError: unexpected indent

[21:20:42|11-11-21] FATAL ERROR: Traceback (most recent call last):
  File "main.py", line 284, in <module>
    exec(code) # запуск всего кода который мы прочитали из файлов
  File "<string>", line 857, in <module>
  File "<string>", line 26, in save_obj
FileNotFoundError: [Errno 2] No such file or directory: 'save/user.pkl'

[21:34:49|11-11-21] FATAL ERROR: Traceback (most recent call last):
  File "main.py", line 284, in <module>
    exec(code) # запуск всего кода который мы прочитали из файлов
  File "<string>", line 823
SyntaxError: positional argument follows keyword argument

[21:35:03|11-11-21] FATAL ERROR: Traceback (most recent call last):
  File "main.py", line 284, in <module>
    exec(code) # запуск всего кода который мы прочитали из файлов
  File "<string>", line 823
SyntaxError: positional argument follows keyword argument

[21:36:07|11-11-21] FATAL ERROR: Traceback (most recent call last):
  File "main.py", line 284, in <module>
    exec(code) # запуск всего кода который мы прочитали из файлов
  File "<string>", line 823
SyntaxError: positional argument follows keyword argument

[21:36:41|11-11-21] FATAL ERROR: Traceback (most recent call last):
  File "main.py", line 284, in <module>
    exec(code) # запуск всего кода который мы прочитали из файлов
  File "<string>", line 823
SyntaxError: positional argument follows keyword argument

